<resources>
    <string name="app_name">Название приложения</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Слайд-шоу</string>
    <string name="add_category">Добавить</string>
    <string name="enter_category">Введите категорию</string>
    <string name="category_color">Цвет категории</string>
    <string name="add_color">Цвет</string>
    <string name="categories">Категории</string>
    <string name="tasks_to_do">Открытые задачи</string>
    <string name="completed_tasks">Выполненные задачи</string>
    <string name="create_task">Создать задачу</string>
    <string name="enter_task_information">Введите описание задачи</string>
    <string name="due_date">Дата выполнения</string>
    <string name="completed">Выполнено</string>
    <string name="priority">Важность</string>
    <string name="low">Низкая</string>
    <string name="medium">Средняя</string>
    <string name="high">Высокая</string>
    <string name="category">Категория</string>
    <string name="add_new_category">+ Добавить новую категорию</string>
    <string name="new_task">Новая задача</string>
    <string name="settings">Настройки</string>
    <string name="notification">Уведомления</string>
    <string name="low_priority_tasks">Задачи с <b>низкой</b> важностью</string>
    <string name="medium_priority_tasks">Задачи со <b>средней</b> важностью</string>
    <string name="high_priority_tasks">Задачи с <b>высокой</b> важностью</string>
    <string name="general">Общее</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="dark_theme">Темная тема</string>
    <string name="task_update">Обновить</string>
    <string name="task_add_category_message">Добавьте категорию</string>
    <string name="task_add_desc_message">Добавьте описание</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="ok_button">Подтвердить</string>
    <string name="cancel_button">Отмена</string>
    <string name="new_category_title">Новая категория</string>
    <string name="tasks_view">Вид задач</string>
    <string name="calendar">Календарь</string>
    <string name="task_deleted_message">Успешно удалено</string>
    <string name="take_back_message">Вернуть</string>
    <string name="json_to_email">Отправить задачи</string>
    <string name="send_all_uncompleted_tasks">Отправить все незавершенные задачи</string>
</resources>